Quarto commit do projeto

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ nav a:hover {
 }
 
 .paragrafo-1 {
-    text-align: justify;
+    text-align: center;
     margin: 0 auto;
     padding: 1em 0;
     width: 940px;
@@ -131,6 +131,60 @@ nav a:hover {
     margin: 0 20px 20px 0;
 }
 
+main {
+    width: 940px;
+	margin: 0 auto;
+}
+
+form {
+    margin: 40px 0;
+}
+
+form label {
+    display: block;
+    font-size: 20px;
+    margin: 1em;
+}
+
+form legend {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 5px;
+}
+
+.input-padrao {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+
+.checkbox {
+    margin: 20px 0;
+}
+
+.body-contato {
+    width: 860px;
+}
+
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: blue;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+    margin: 1em;
+}
+
+.enviar:hover {
+    background: darkblue;
+    transform: scale(1.2);
+}
 
 footer {
    text-align: center;
