--- a/style.css
+++ b/style.css
@@ -37,8 +37,7 @@ nav a {
 }
 
 nav a:hover {
-    color: #C78C19;
-    text-decoration: underline;
+    color: goldenrod;
 }
 
 .principal {
@@ -73,7 +72,8 @@ nav a:hover {
 }
 
 .banner-principal {
-    width: 60%;
+    width: 107%;
+    padding: 50px;
 }
 
 .beneficios {
@@ -90,6 +90,17 @@ nav a:hover {
     text-align: center;
     font-weight: bold;
     padding: 20px;
+}
+
+.segundo-titulo {
+    padding-left: 20px;
+    text-align: center;
+    font-weight: bold;
+    padding-block-start: 20px;
+}
+
+em {
+    font-style: italic;
 }
 
 .lista-beneficios {
@@ -113,6 +124,7 @@ nav a:hover {
     padding: 40px;
     text-align: center;
     font-weight: bolder;
+    font-size: 40px;
 }
 
 .about {
@@ -154,17 +166,17 @@ form legend {
 
 .input-padrao {
     display: block;
-    margin: 0 0 20px;
+    margin: 20px;
     padding: 10px 25px;
     width: 50%;
 }
 
 .checkbox {
-    margin: 20px 0;
+    margin: 10px 0;
 }
 
 .body-contato {
-    width: 860px;
+    width: 940px;
 }
 
 .enviar {
@@ -178,12 +190,31 @@ form legend {
     border-radius: 5px;
     transition: 1s all;
     cursor: pointer;
-    margin: 1em;
+    margin: 2em;
 }
 
 .enviar:hover {
     background: darkblue;
     transform: scale(1.2);
+}
+
+.whatsapp-link {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #25d366;
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 1px 1px 2px #888;
+    z-index: 1000;
+}
+
+.fa-whatsapp {
+    margin-top: 16px;
 }
 
 footer {
