--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ nav a:hover {
     padding: 30px;
     font-size: 20px;
     margin-top: 20px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .titulo-principal {
@@ -55,13 +56,20 @@ nav a:hover {
     text-align: center;
     font-weight: bold;
     padding: 20px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .paragrafo-1 {
-    text-align: center;
+    text-align: justify;
     margin: 0 auto;
     padding: 1em 0;
     width: 940px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.invista {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .missao {
@@ -69,6 +77,7 @@ nav a:hover {
     margin: 0 auto;
     padding: 1em 0;
     width: 940px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .banner {
@@ -125,10 +134,12 @@ nav a:hover {
     text-align: center;
     font-weight: bolder;
     font-size: 40px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .about {
     text-align: justify;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .about-principal {
