--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
+    width: 100%;
 }
 
 header {
@@ -243,4 +244,3 @@ footer {
 .copyright {
     color: white;
 }
-
