--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 body {
     font-family: 'Montserrat', sans-serif;
+    width: 100%;
 }
 
+/*Backgroun do header - Imagem azul marinho*/
 header {
     background: url(download.jpg);
     padding: 20px 0;
+}
+
+/*Logo do header*/
+.img-logoprincipal {
+    padding: 30px;
 }
 
 .header-logo {
@@ -17,9 +24,10 @@ img {
     width: 350px;
 }
 
+/*Menu de navegação*/
 nav {
     position: absolute;
-    top: 80px;
+    top: 100px;
     right: 0;
 }
 
@@ -37,14 +45,15 @@ nav a {
 }
 
 nav a:hover {
-    color: #C78C19;
-    text-decoration: underline;
+    color: goldenrod;
 }
 
+/*Primeiro texto da página inicial*/
 .principal {
     padding: 30px;
     font-size: 20px;
     margin-top: 20px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .titulo-principal {
@@ -52,30 +61,51 @@ nav a:hover {
     text-align: center;
     font-weight: bold;
     padding: 20px;
+    font-family: 'Montserrat', sans-serif;
 }
 
+/*Primeiro paragrafo da pagina inicial*/
 .paragrafo-1 {
-    text-align: center;
+    text-align: justify;
     margin: 0 auto;
     padding: 1em 0;
     width: 940px;
+    font-family: 'Montserrat', sans-serif;
 }
 
+/*Texto que reforça a importância de investir em planejamento previdenciário*/
+.invista {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
+
+/*Missão, visão e valores*/
 .missao {
     text-align: justify;
     margin: 0 auto;
     padding: 1em 0;
     width: 940px;
+    font-family: 'Montserrat', sans-serif;
 }
 
+.segundo-titulo {
+    padding-left: 20px;
+    text-align: center;
+    font-weight: bold;
+    padding-block-start: 20px;
+}
+
+/*Principal banner da página principal*/
 .banner {
     text-align: center;
 }
 
 .banner-principal {
-    width: 60%;
+    width: 107%;
+    padding: 50px;
 }
 
+/*Benefícios do planejamento previdenciário*/
 .beneficios {
     padding: 3em 0;
 }
@@ -98,6 +128,7 @@ nav a:hover {
     vertical-align: top;
 }
 
+/*Imagem benefícios*/
 .banner-amanda {
     width: 60%;
     opacity: 1;
@@ -109,14 +140,19 @@ nav a:hover {
 	opacity: 0.3;
 }
 
+/*Título sobre Amanda Sagaz*/
 .sobre {
     padding: 40px;
     text-align: center;
     font-weight: bolder;
+    font-size: 40px;
+    font-family: 'Montserrat', sans-serif;
 }
 
+/*Sobre Amanda Sagaz*/
 .about {
     text-align: justify;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .about-principal {
@@ -125,17 +161,20 @@ nav a:hover {
     width: 940px;
 }
 
+/*Foto Amanda Sagaz*/
 .foto-amanda {
     width: 250px;
     float: left;
     margin: 0 20px 20px 0;
 }
 
+/*Main do sobre e página principal*/
 main {
     width: 940px;
 	margin: 0 auto;
 }
 
+/*Contato*/
 form {
     margin: 40px 0;
 }
@@ -154,17 +193,17 @@ form legend {
 
 .input-padrao {
     display: block;
-    margin: 0 0 20px;
+    margin: 20px;
     padding: 10px 25px;
     width: 50%;
 }
 
 .checkbox {
-    margin: 20px 0;
+    margin: 10px 0;
 }
 
 .body-contato {
-    width: 860px;
+    width: 940px;
 }
 
 .enviar {
@@ -178,7 +217,7 @@ form legend {
     border-radius: 5px;
     transition: 1s all;
     cursor: pointer;
-    margin: 1em;
+    margin: 2em;
 }
 
 .enviar:hover {
@@ -186,6 +225,27 @@ form legend {
     transform: scale(1.2);
 }
 
+/*Botão WhatsApp*/
+.whatsapp-link {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #25d366;
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 1px 1px 2px #888;
+    z-index: 1000;
+}
+
+.fa-whatsapp {
+    margin-top: 16px;
+}
+
+/*Rodapé*/
 footer {
    text-align: center;
    background: url(download.jpg);
@@ -193,7 +253,11 @@ footer {
    width: 100%;
 }
 
+.rodape {
+    width: 400px;
+    padding: 30px;
+}
+
 .copyright {
     color: white;
 }
-
